{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 28,
  "lineage": "19cceaa1-2125-5e38-57d7-436702eb7f0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpcigw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08a5394cf67bc633b",
            "owner_id": "826534061673",
            "tags": {
              "Name": "vpcigw"
            },
            "vpc_id": "vpc-0d047d7ea212046d0"
          },
          "depends_on": [
            "aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07851a39dc89871fe",
            "owner_id": "826534061673",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a5394cf67bc633b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d047d7ea212046d0"
          },
          "depends_on": [
            "aws_internet_gateway.vpcigw",
            "aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetable_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c74d8a46175b56d",
            "route_table_id": "rtb-07851a39dc89871fe",
            "subnet_id": "subnet-0903be6677f9edbbe"
          },
          "depends_on": [
            "aws_route_table.routetable",
            "aws_subnet.subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetable_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9eb4633e162eb1f",
            "route_table_id": "rtb-07851a39dc89871fe",
            "subnet_id": "subnet-0875819be630c14e5"
          },
          "depends_on": [
            "aws_route_table.routetable",
            "aws_subnet.subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826534061673:security-group/sg-0940d9841c989db57",
            "description": "Allow https",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0940d9841c989db57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cluster-sg",
            "name_prefix": null,
            "owner_id": "826534061673",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d047d7ea212046d0"
          },
          "depends_on": [
            "aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826534061673:security-group/sg-0ecb73feccbb4d2a2",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecb73feccbb4d2a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "node-sg",
            "name_prefix": null,
            "owner_id": "826534061673",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d047d7ea212046d0"
          },
          "depends_on": [
            "aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826534061673:subnet/subnet-0903be6677f9edbbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/21",
            "id": "subnet-0903be6677f9edbbe",
            "map_public_ip_on_launch": true,
            "owner_id": "826534061673",
            "tags": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-0d047d7ea212046d0"
          },
          "depends_on": [
            "aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826534061673:subnet/subnet-0875819be630c14e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/21",
            "id": "subnet-0875819be630c14e5",
            "map_public_ip_on_launch": true,
            "owner_id": "826534061673",
            "tags": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-0d047d7ea212046d0"
          },
          "depends_on": [
            "aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826534061673:vpc/vpc-0d047d7ea212046d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c5b7dee24c2acb5",
            "default_route_table_id": "rtb-0465354ed72ce2349",
            "default_security_group_id": "sg-0ebf46295e8927324",
            "dhcp_options_id": "dopt-bbc2c9c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d047d7ea212046d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0465354ed72ce2349",
            "owner_id": "826534061673",
            "tags": {
              "Name": "Cluster-VPC"
            }
          }
        }
      ]
    }
  ]
}